# brukerbridge

./: .gitattributes  .gitignore  .lfsconfig  README.md  pyproject.toml
brukerbridge/: __init__.py  __main__.py  check_for_raw.py  client.py  constants.py  gui_test.py  io.py  logging.py  raw_to_tiff.py  server.py  test.py  tiff_to_nii.py  tiff_to_nii_split.py  tiffs_to_tiff_stack.py  transfer_fictrac.py  transfer_to_oak.py  transfer_to_oak_globus.py  utils.py
brukerbridge/cli/: bridge.py  main.py
brukerbridge/conversion/: __init__.py  common.py  pv58.py
brukerbridge/legacy/: __init__.py  tiff_to_nii.py  tiff_to_nii_split.py
scripts/: email.txt  launch_bridge.bat  launch_queue_watcher.bat  launch_server.bat  main.py  old_main.py  queue_watcher.py  ripper.bat  run_partial.py  run_partial_many.py
tests/: conftest.py  test_common_conversion_logic.py  test_io.py  test_pv58_conversion_logic.py  test_streaming_io.py
tests/data/PV5-8/: ripped_test_acqs.tar.gz.part.aa  ripped_test_acqs.tar.gz.part.ab  ripped_test_acqs.tar.gz.part.ac
tests/data/conversion_targets/sp_med/: TSeries_sp-002.xml  TSeries_sp-002_channel_1.nii  TSeries_sp-002_channel_2.nii
tests/data/conversion_targets/sp_small/: TSeries_sp-001.xml  TSeries_sp-001_channel_1.nii  TSeries_sp-001_channel_2.nii
tests/data/conversion_targets/vol_bd_med/: TSeries_v_bd-001_channel_1.nii  TSeries_v_bd-001_channel_2.nii
tests/data/conversion_targets/vol_med/: TSeries_v-003_channel_1.nii  TSeries_v-003_channel_2.nii
users/: David.json  Ilana.json  Jacob.json  Lianna.json  Lorna.json  Manze.json  Tim.json  berger.json  brezovec.json  example.json  luke.json  minseung.json  test-depth.json
(+318 files in other folders)
