[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brukerbridge"
version = "0.1.1"
authors = [
  { name="Bella Brezovec", email="brezovec@stanford.edu" },
  { name="Andrew Berger", email="a5b@stanford.edu" }

]
readme = "README.md"
# 3.8.10 is the last version of python that supports windows 7 and can reasonably be installed but you could run it on later versions too
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
   "nibabel",
   "numpy",
   "scikit-image",
   "matplotlib",
   "tiffile",
   "ftputil"
]


[project.urls]
Homepage = "https://github.com/ClandininLab/brukerbridge"

[tool.isort]
known_first_party=["brukerbridge"]

[tool.pyright]
include = ["brukerbridge"]

pythonVersion = "3.8.10"
pythonPlatform = "Windows"

venvPath = "/Users/andrew/venvs"
venv = "brukerbridge"